// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`UrlPreviewGroupViewModel should deduplicate multiple versions of the same URL 1`] = `
{
  "overPreviewLimit": false,
  "previews": [
    {
      "author": undefined,
      "description": "This is a description",
      "image": undefined,
      "link": "https://example.org",
      "showTooltipOnLink": false,
      "siteIcon": undefined,
      "siteName": "Example.org",
      "title": "This is an example!",
    },
  ],
  "previewsLimited": true,
  "totalPreviewCount": 1,
}
`;

exports[`UrlPreviewGroupViewModel should handle being hidden and shown by the user 1`] = `
{
  "overPreviewLimit": false,
  "previews": [],
  "previewsLimited": true,
  "totalPreviewCount": 1,
}
`;

exports[`UrlPreviewGroupViewModel should handle being hidden and shown by the user 2`] = `
{
  "overPreviewLimit": false,
  "previews": [
    {
      "author": undefined,
      "description": "This is a description",
      "image": undefined,
      "link": "https://example.org",
      "showTooltipOnLink": false,
      "siteIcon": undefined,
      "siteName": "Example.org",
      "title": "This is an example!",
    },
  ],
  "previewsLimited": true,
  "totalPreviewCount": 1,
}
`;

exports[`UrlPreviewGroupViewModel should hide preview when invisible 1`] = `
{
  "overPreviewLimit": false,
  "previews": [],
  "previewsLimited": true,
  "totalPreviewCount": 1,
}
`;

exports[`UrlPreviewGroupViewModel should ignore failed previews 1`] = `
{
  "overPreviewLimit": false,
  "previews": [],
  "previewsLimited": true,
  "totalPreviewCount": 1,
}
`;

exports[`UrlPreviewGroupViewModel should ignore media when mediaVisible is false 1`] = `
{
  "overPreviewLimit": false,
  "previews": [
    {
      "author": undefined,
      "description": undefined,
      "image": undefined,
      "link": "https://example.org",
      "showTooltipOnLink": false,
      "siteIcon": undefined,
      "siteName": "example.org",
      "title": "This is an example!",
    },
  ],
  "previewsLimited": true,
  "totalPreviewCount": 1,
}
`;

exports[`UrlPreviewGroupViewModel should preview a single valid URL 1`] = `
{
  "overPreviewLimit": false,
  "previews": [
    {
      "author": undefined,
      "description": "This is a description",
      "image": undefined,
      "link": "https://example.org",
      "showTooltipOnLink": false,
      "siteIcon": undefined,
      "siteName": "Example.org",
      "title": "This is an example!",
    },
  ],
  "previewsLimited": true,
  "totalPreviewCount": 1,
}
`;

exports[`UrlPreviewGroupViewModel should return no previews by default 1`] = `
{
  "overPreviewLimit": false,
  "previews": [],
  "previewsLimited": true,
  "totalPreviewCount": 0,
}
`;
